--- a/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp.Framework/CSharp.Framework.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
       <PackageReference Include="NPOI" Version="2.5.1" />
     </ItemGroup>
 
