--- a/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp.Framework/CSharp.Framework.csproj
@@ -5,9 +5,11 @@
         <Description>c# 的一些常用方法封装</Description>
         <PackageProjectUrl>https://github.com/leo93/CSharp.Framework</PackageProjectUrl>
         <RepositoryUrl>https://github.com/leo93/CSharp.Framework</RepositoryUrl>
-        <PackageTags>framework</PackageTags>
+        <PackageTags>framework common-methods</PackageTags>
         <Authors>leo</Authors>
         <PackageReleaseNotes>ExcelHelper</PackageReleaseNotes>
+        <Title>CSharp.Framework</Title>
+        <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
