--- a/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp.Framework/CSharp.Framework.csproj
@@ -10,6 +10,7 @@
         <PackageReleaseNotes>ExcelHelper</PackageReleaseNotes>
         <Title>CSharp.Framework</Title>
         <RepositoryType>github</RepositoryType>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
