--- a/CSharp.Framework.UnitTest/CSharp.Framework.UnitTest.csproj
+++ b/CSharp.Framework.UnitTest/CSharp.Framework.UnitTest.csproj
@@ -14,4 +14,11 @@
       <ProjectReference Include="..\CSharp.Framework\CSharp.Framework.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="appsettings.json" />
+      <Content Include="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
