--- a/CSharp.Framework/CSharp.Framework.csproj
+++ b/CSharp.Framework/CSharp.Framework.csproj
@@ -10,10 +10,12 @@
         <PackageReleaseNotes>ExcelHelper</PackageReleaseNotes>
         <Title>CSharp.Framework</Title>
         <RepositoryType>github</RepositoryType>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.0.2</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0-preview.2.20160.3" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-preview.2.20160.3" />
       <PackageReference Include="NPOI" Version="2.5.1" />
     </ItemGroup>
 
